--- a/todo-react/todos-front/src/UI/Card.module.css
+++ b/todo-react/todos-front/src/UI/Card.module.css
@@ -1,5 +1,21 @@
 .card {
+  position: relative;
   padding: 10px;
-  border-radius: 10px;
-  box-shadow: 0 5px 2px rgba(0, 0, 0, 0.25);
+  margin-bottom: .3em;
+  cursor: pointer;
+}
+
+.card::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 0;
+  height: 3px;
+  top: 2.6em;
+  transition: all .3s cubic-bezier(0.2, 0.84, 0.77, 0.93);
+  background-image: linear-gradient(to left, #9381FF, #efc0e9);
+}
+
+.card:hover::after{
+  width: 100%;
 }
