--- a/todo-react/todos-front/src/index.css
+++ b/todo-react/todos-front/src/index.css
@@ -3,3 +3,11 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(
+    to left, #F2B2D5, #B8E1FF
+  );
+}
